# Full-Screen-Borderless

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  format.sh
resources/: Resource.rc  fsb.manifest
src/: assert.h  assert.hh  assert.hpp  base_types.h  base_types.hh  base_types.hpp  build-clang.bat  build-g++.bat  build-g++.sh  build-msvc.bat  config.cc  config.h  console.cc  console.cpp  console.h  console.hh  console.hpp  error.h  error.hh  error.hpp  fsb.cc  fsb_assert.h  fsb_string.h  main.cc  main.cpp  main_og.cpp  string.h  string.hh  string.hpp
